[package]
name = "ai_function"
version = "0.1.0"
edition = "2021"
authors = ["Taylor g"]
description = "Procedural Macro for creating text from a function to use in Large language Models"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.15", features = ["full"] }
